--- a/projects/blog/src/app/components/footer/footer.html
+++ b/projects/blog/src/app/components/footer/footer.html
@@ -1,3 +1,3 @@
-<footer class="mt-8 pb-4 flex justify-between">
-  <p>Copyright</p>
+<footer class="mt-8 pb-4 flex justify-between text-sm">
+  <p>&copy; {{ today | date: 'yyyy' }} <a href="https://github.com/techgardencode" target="_blank" rel="noopener noreferrer">TechGardenCode</a>. Some rights reserved</p>
 </footer>
