--- a/projects/blog/src/app/components/header/header.html
+++ b/projects/blog/src/app/components/header/header.html
@@ -1,7 +1,19 @@
-<header class="h-16 pl-4 flex items-center justify-between">
-  <app-breadcrumb [breadcrumbItems]="breadcrumbItems()" />
+<header class="h-16 flex items-center gap-4 justify-between overflow-hidden">
+  <app-breadcrumb
+    class="hidden md:block overflow-hidden"
+    [breadcrumbItems]="breadcrumbItems()"
+  />
+  <button
+    seedButton
+    size="icon"
+    variant="ghost"
+    class="md:hidden"
+    (click)="mobileService.toggleNav()"
+  >
+    <ng-icon seedIcon name="lucideMenu" />
+  </button>
   <search
-    class="border border-stone-400 rounded-full flex item-center px-2 focus-within:border-stone-700"
+    class="border border-stone-400 rounded-full flex item-center px-2 focus-within:border-stone-700 transition-[width] w-48 focus-within:w-64 lg:w-64"
   >
     <input class="outline-none py-1 px-2" placeholder="search" />
   </search>
