--- a/projects/blog/src/app/components/nav/nav.html
+++ b/projects/blog/src/app/components/nav/nav.html
@@ -1,1 +1,86 @@
-<p>nav works!</p>
+<div class="rounded-full w-32 aspect-square border-2 border-border">
+  <img
+    src="/img/me.png"
+    alt="Placeholder"
+    class="rounded-full w-full h-full object-cover"
+  />
+</div>
+<a href="#" class="text-2xl">
+  <h1>Tech Garden Code</h1>
+</a>
+<p>Principal Architect // Bring back on-prem!</p>
+<div class="w-full mt-12">
+  <ul class="flex flex-col gap-4">
+    <li>
+      <a
+        seedButton
+        variant="ghost"
+        routerLink="/"
+        class="w-full justify-start"
+        (click)="mobileService.closeNav()"
+      >
+        <ng-icon seedIcon name="lucideHouse" />
+        <span>Home</span>
+      </a>
+    </li>
+    <li>
+      <a
+        seedButton
+        variant="ghost"
+        routerLink="/about"
+        class="w-full justify-start"
+        (click)="mobileService.closeNav()"
+      >
+        <ng-icon seedIcon name="lucideInfo" />
+        <span>About</span>
+      </a>
+    </li>
+  </ul>
+</div>
+<div class="mt-auto flex w-full gap-2 items-center justify-center">
+  <button
+    seedButton
+    size="icon-round"
+    variant="ghost"
+    (click)="themeService.toggleLightDarkMode()"
+    class="cursor-pointer"
+  >
+    <ng-icon
+      seedIcon
+      [name]="themeService.getMode() === 'dark' ? 'lucideSun' : 'lucideMoon'"
+    />
+  </button>
+  <ng-icon seedIcon name="lucideDot"></ng-icon>
+  <a
+    seedButton
+    size="icon-round"
+    variant="ghost"
+    class="cursor-pointer"
+    href="https://x.com/techgardencode"
+    target="_blank"
+    rel="noopener noreferrer"
+  >
+    <svg
+      class="size-5"
+      viewBox="0 0 16 16"
+      fill="currentColor"
+      xmlns="http://www.w3.org/2000/svg"
+      aria-hidden="true"
+    >
+      <path
+        d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"
+      />
+    </svg>
+  </a>
+  <a
+    seedButton
+    size="icon-round"
+    variant="ghost"
+    class="cursor-pointer"
+    href="https://github.com/techgardencode"
+    target="_blank"
+    rel="noopener noreferrer"
+  >
+    <ng-icon seedIcon name="lucideGithub"></ng-icon>
+  </a>
+</div>
