--- a/projects/blog/src/app/pages/home/home.html
+++ b/projects/blog/src/app/pages/home/home.html
@@ -1,33 +1,59 @@
-<div class="flex flex-col container mx-auto px-3 relative">
+<div class="flex flex-col container max-w-7xl mx-auto px-4 md:px-0 relative">
   <app-header [breadcrumbItems]="breadcrumbItems" />
-  <div class="flex gap-3 mt-8">
-    <main class="grow px-4">
+  <div class="flex gap-4 mt-8">
+    <main class="grow">
       <div class="flex flex-col gap-4">
-        @for(post of postsService.posts(); track post.id) {
+        @if(postsApiState().loading) { @for(i of [].constructor(3); track
+        $index) {
+        <div
+          class="flex flex-col md:flex-row-reverse rounded-lg shadow shadow-border relative before:content-[''] before:w-full before:h-full before:absolute before:transition-opacity before:bg-secondary before:opacity-0 hover:before:opacity-30"
+        >
+          <div class="shrink-0 md:w-1/2 md:max-w-80 bg-border animate-pulse">
+            <div
+              class="w-full h-full rounded-t-lg md:rounded-l-none md:rounded-r-lg aspect-video object-cover bg-gray-300"
+            ></div>
+          </div>
+          <div
+            class="grow bg-card rounded-b-lg md:rounded-r-none md:rounded-l-lg border border-s border-border"
+          >
+            <div class="flex flex-col p-6">
+              <h2 class="bg-border w-1/2 h-5 my-1 rounded-lg"></h2>
+              <p class="bg-border w-3/4 h-4 my-1 rounded-lg"></p>
+              <div class="mt-3 bg-border w-24 h-4 mb-1 rounded-lg"></div>
+            </div>
+          </div>
+        </div>
+        } } @else { @for(post of postsApiState().data?.content; track post.id) {
         <a
           routerLink="/posts/{{ post.id }}"
-          class="flex flex-col md:flex-row-reverse"
+          class="flex flex-col md:flex-row-reverse rounded-lg shadow shadow-border relative before:content-[''] before:w-full before:h-full before:absolute before:transition-opacity before:bg-secondary before:opacity-0 hover:before:opacity-30"
         >
-          <div class="shrink-0">
+          <div class="shrink-0 md:w-1/2 md:max-w-80">
             <img
-              src="https://placehold.co/400"
+              [src]="post.imageUrl"
               alt="Post Image"
-              class="w-full md:w-64 rounded-e-lg aspect-video object-cover"
+              class="w-full h-full rounded-t-lg md:rounded-l-none md:rounded-r-lg aspect-video object-cover bg-border"
             />
           </div>
-          <div class="grow bg-stone-100 rounded-s-lg">
+          <div
+            class="grow bg-card rounded-b-lg md:rounded-r-none md:rounded-l-lg border border-s border-border"
+          >
             <div class="flex flex-col p-6">
-              <h2 class="text-xl font-bold">{{ post.title }}</h2>
-              <p class="text-stone-600">{{ post.description }}</p>
-              <div class="mt-2 text-stone-500">{{ post.date }}</div>
+              <h2
+                class="text-xl font-bold line-clamp-2 truncate whitespace-normal"
+              >
+                {{ post.title }}
+              </h2>
+              <p class="text-secondary-foreground">{{ post.description }}</p>
+              <div class="mt-2 text-secondary-foreground">{{ post.date }}</div>
             </div>
           </div>
         </a>
-        }
+        } }
       </div>
       <app-footer />
     </main>
-    <aside class="hidden lg:block w-48 shrink-0 relative">
+    <aside class="hidden lg:block w-64 shrink-0 relative">
       <app-anchor />
     </aside>
   </div>
