--- a/projects/blog/src/app/app.html
+++ b/projects/blog/src/app/app.html
@@ -19,10 +19,11 @@
   class="fixed w-full lg:w-[calc(100%-16rem)] lg:left-64 bottom-24 data-[scroll-to-top=true]:block hidden z-50"
   [attr.data-scroll-to-top]="showScrollToTop()"
 >
-  <div class="lg:w-7xl mx-auto relative">
+  <div class="lg:max-w-7xl mx-auto relative">
     <button
       seedButton
-      class="absolute right-4 lg:right-0 cursor-pointer rounded-full"
+      variant="secondary"
+      class="absolute right-4 cursor-pointer rounded-full"
       size="icon-lg"
       (click)="scrollToTop()"
     >
