--- a/projects/blog/src/app/pages/posts/posts.html
+++ b/projects/blog/src/app/pages/posts/posts.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col container max-w-7xl mx-auto px-4 md:px-0 relative">
+<div class="flex flex-col container max-w-7xl mx-auto px-4 relative">
   <app-header [breadcrumbItems]="breadcrumbItems" />
   <div class="flex gap-4">
     <main class="w-full lg:w-[calc(100%-16rem-1rem)]">
