--- a/projects/techgarden/src/app/components/shared/header/header.html
+++ b/projects/techgarden/src/app/components/shared/header/header.html
@@ -1,4 +1,4 @@
-<header class="h-16 flex items-center gap-4 justify-between overflow-hidden max-w-7xl mx-auto">
+<header class="h-16 flex items-center gap-4 justify-between overflow-hidden max-w-7xl mx-auto bg-background">
   <app-breadcrumb
     class="hidden md:block overflow-hidden"
     [breadcrumbItems]="breadcrumbItems()"
