--- a/projects/techgarden/src/app/pages/home/home.page.html
+++ b/projects/techgarden/src/app/pages/home/home.page.html
@@ -1,2 +1,4 @@
-<p>WIP!</p>
-<p>Use the navigation on the left to explore the blog posts.</p>
+<div class="flex flex-col container max-w-7xl mx-auto p-0 relative">
+  <p>WIP!</p>
+  <p>Use the navigation on the left to explore the blog posts.</p>
+</div>
