--- a/projects/techgarden/src/app/pages/blog/blog.page.html
+++ b/projects/techgarden/src/app/pages/blog/blog.page.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col container max-w-7xl mx-auto p-0 relative">
-  <div class="flex gap-4 mt-8">
+  <div class="flex gap-4">
     <main class="grow">
       <div class="flex flex-col gap-4">
         @if(postsApiState().loading) { @for(i of [].constructor(3); track
@@ -50,7 +50,6 @@
         </a>
         } }
       </div>
-      <app-footer />
     </main>
     <aside class="hidden lg:block w-64 shrink-0 relative">
       <app-anchor />
