--- a/projects/techgarden/src/app/pages/blog/posts/posts.page.html
+++ b/projects/techgarden/src/app/pages/blog/posts/posts.page.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col container max-w-7xl mx-auto px-0 relative">
   <div class="flex gap-4">
     <main class="w-full lg:w-[calc(100%-16rem-1rem)]">
-      <h1 seedH1>{{ post()?.title }}</h1>
+      <h1 seedH1 class="mb-8">{{ post()?.title }}</h1>
       <div class="break-words">
         @if (mdPost()) {
         <app-post-group
@@ -10,9 +10,8 @@
         />
         }
       </div>
-      <app-footer />
     </main>
-    <aside class="hidden lg:block w-64 shrink-0 relative mt-8">
+    <aside class="hidden lg:block w-64 shrink-0 relative">
       <app-anchor [sections]="[postContents()]" />
     </aside>
   </div>
