--- a/projects/techgarden/src/app/components/shared/footer/footer.html
+++ b/projects/techgarden/src/app/components/shared/footer/footer.html
@@ -1,3 +1,3 @@
-<footer class="h-16 flex items-center justify-between text-sm">
+<footer class="h-16 flex items-center justify-between text-sm max-w-7xl mx-auto bg-background">
   <p>&copy; {{ today | date: 'yyyy' }} <a href="https://github.com/techgardencode" target="_blank" rel="noopener noreferrer">TechGardenCode</a>. Some rights reserved</p>
 </footer>
