feat: init posthog and page updates

--- a/projects/techgarden/src/app/components/shared/header/header.html
+++ b/projects/techgarden/src/app/components/shared/header/header.html
@@ -1,4 +1,6 @@
-<header class="h-16 flex items-center gap-4 justify-between overflow-hidden max-w-7xl mx-auto bg-background">
+<header
+  class="h-16 flex items-center gap-4 justify-between overflow-hidden max-w-7xl mx-auto bg-background"
+>
   <app-breadcrumb
     class="hidden md:block overflow-hidden"
     [breadcrumbItems]="breadcrumbItems()"
@@ -12,9 +14,14 @@
   >
     <ng-icon seedIcon name="lucideMenu" />
   </button>
-  <search
+  <!-- <search
     class="border border-border rounded-md flex item-center transition-[width] w-48 lg:w-64 focus-within:w-64 focus-within:ring-[3px] focus-within:ring-ring/50 focus-within:border-ring shadow-xs bg-input/30"
   >
     <input class="outline-none py-1 px-2" placeholder="Search" />
-  </search>
+  </search> -->
+  <input
+    seedInput
+    placeholder="Search"
+    class="w-48 lg:w-64 focus-within:w-64 transition-[width]"
+  />
 </header>
