--- a/projects/techgarden/src/app/app.html
+++ b/projects/techgarden/src/app/app.html
@@ -8,7 +8,7 @@
   class="md:ml-64 grow flex flex-col transition-transform duration-300 transform data-[mobile-open=true]:translate-x-64 px-4"
   [attr.data-mobile-open]="mobileService.isNavOpen()"
 >
-  <app-header [breadcrumbItems]="headerService.breadcrumbs()" />
+  <app-header class="mb-12" [breadcrumbItems]="headerService.breadcrumbs()" />
   <router-outlet />
   <app-footer class="mt-auto" />
 </div>
