fix: text formatting

--- a/projects/techgarden/src/app/components/shared/nav/nav.html
+++ b/projects/techgarden/src/app/components/shared/nav/nav.html
@@ -6,9 +6,9 @@
   />
 </div>
 <a href="#" class="text-2xl">
-  <h1>Tech Garden Code</h1>
+  <h1 seedH1>Tech Garden</h1>
 </a>
-<p>Principal Architect // Bring back on-prem!</p>
+<p>Principal Architect<br>Bring back on-prem!</p>
 <div class="w-full mt-12">
   <ul class="flex flex-col gap-2 -mx-4">
     <li>
