--- a/projects/techgarden/src/app/pages/about/about.page.html
+++ b/projects/techgarden/src/app/pages/about/about.page.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col gap-4 container max-w-7xl mx-auto p-0 relative">
+<div class="flex flex-col gap-4">
   <h1 seedH1 class="mb-8">Hi I'm Kian!</h1>
   <p seedH2 class="mb-4">
     {{ ageInYears() }} year old tech nerd living in Washington, D.C.
