--- a/projects/techgarden/src/app/pages/blog/posts/posts.page.html
+++ b/projects/techgarden/src/app/pages/blog/posts/posts.page.html
@@ -1,18 +1,38 @@
-<div class="flex flex-col container max-w-7xl mx-auto px-0 relative">
-  <div class="flex gap-4">
-    <main class="w-full lg:w-[calc(100%-16rem-1rem)]">
-      <h1 seedH1 class="mb-8">{{ post()?.title }}</h1>
-      <div class="break-words">
-        @if (mdPost()) {
-        <app-post-group
-          [postMarkdown]="mdPost()"
-          (postContents)="postContents.set($event)"
-        />
-        }
-      </div>
-    </main>
-    <aside class="hidden lg:block w-64 shrink-0 relative">
-      <app-anchor [sections]="[postContents()]" />
-    </aside>
-  </div>
+<div class="flex gap-4">
+  <main class="w-full lg:w-[calc(100%-16rem-1rem)] mr-auto">
+    <h1 seedH1 class="mb-8">{{ post()?.metadata.title }}</h1>
+    <div class="flex gap-2 mb-3 text-xs">
+      <p>
+        Posted
+        <span class="font-semibold">{{
+          post()?.metadata.createdAt | date
+        }}</span>
+      </p>
+      <p>
+        Updated
+        <span class="font-semibold">{{
+          post()?.metadata.updatedAt | date
+        }}</span>
+      </p>
+    </div>
+    <img
+      [src]="post()?.metadata.imageUrl"
+      alt="{{ post()?.metadata.title }}"
+      class="mb-4 aspect-video w-full max-w-[800px] object-cover rounded-lg"
+    />
+    <p class="text-xs mb-6">
+      By <span class="font-semibold">{{ post()?.metadata.author }}</span>
+    </p>
+    <div class="break-words">
+      @if (mdPost()) {
+      <app-post-group
+        [postMarkdown]="mdPost()"
+        (postContents)="postContents.set($event)"
+      />
+      }
+    </div>
+  </main>
+  <aside class="hidden lg:block w-64 shrink-0 relative">
+    <app-anchor [sections]="[postContents()]" />
+  </aside>
 </div>
