--- a/projects/techgarden/src/app/pages/test/test.page.html
+++ b/projects/techgarden/src/app/pages/test/test.page.html
@@ -3,7 +3,7 @@
     <div class="flex flex-col gap-4">
       <div class="flex flex-col gap-2 items-start h-dvh">
         <h2 seedH2 id="blog">Blog</h2>
-        <form class="flex flex-col gap-2 items-start" [formGroup]="blogForm">
+        <form class="flex flex-col gap-2 items-start" [formGroup]="blogForm" (ngSubmit)="createPost()">
           <div formGroupName="metadata">
             <label>Title</label>
             <input seedInput type="text" formControlName="title" />
@@ -28,8 +28,8 @@
               formControlName="content"
             ></textarea>
           </div>
+          <button seedButton type="submit">Create post</button>
         </form>
-        <button seedButton (click)="createPost()">Create post</button>
       </div>
     </div>
   </main>
