feat: update admin route

--- a/projects/techgarden/src/app/components/shared/nav/nav.html
+++ b/projects/techgarden/src/app/components/shared/nav/nav.html
@@ -52,12 +52,12 @@
       <a
         seedButton
         variant="ghost"
-        routerLink="/test"
+        routerLink="/admin"
         class="w-full gap-3 justify-start"
         (click)="mobileService.closeNav()"
       >
         <ng-icon seedIcon name="lucideTestTube" />
-        <span>Test</span>
+        <span>Admin</span>
       </a>
     </li>
     }
