feat: update admin edit pages

--- a/projects/techgarden/src/app/pages/admin/admin.page.html
+++ b/projects/techgarden/src/app/pages/admin/admin.page.html
@@ -1,14 +1,10 @@
 <div class="flex gap-4">
   <main class="grow">
     <div class="flex flex-col gap-4">
-      <div class="flex flex-col gap-4 items-start h-dvh">
+      <div class="flex flex-col gap-4 items-start">
         <h2 seedH2 id="blog">Blog</h2>
-        <div class="flex flex-col gap-2">
-          <h3 seedH3>Create new post</h3>
-          <button seedButton routerLink="/admin/blog/create">
-            Create post
-          </button>
-        </div>
+        <button seedButton size="lg" routerLink="/admin/blog">View posts</button>
+        <button seedButton size="lg" routerLink="/admin/blog/create">Create new post</button>
       </div>
     </div>
   </main>
