--- a/projects/techgarden/src/app/pages/admin/blog/post/edit/blog-post-edit.page.html
+++ b/projects/techgarden/src/app/pages/admin/blog/post/edit/blog-post-edit.page.html
@@ -1,5 +1,5 @@
 @if(post()) {
-<div class="mr-[272px]">
+<div class="lg:mr-[272px]">
   <app-blog-editor [post]="post()" update="true" (onSubmit)="onSubmit($event)"></app-blog-editor>
 </div>
 }
