--- a/projects/techgarden/src/app/pages/admin/blog/post/create/blog-post-create.page.html
+++ b/projects/techgarden/src/app/pages/admin/blog/post/create/blog-post-create.page.html
@@ -1,3 +1,3 @@
 <div class="lg:mr-[272px]">
-  <app-blog-editor (onSubmit)="onSubmit($event)"></app-blog-editor>
+  <app-blog-editor (postSubmit)="postSubmit($event)"></app-blog-editor>
 </div>
