--- a/projects/techgarden/src/app/pages/blog/blog.page.html
+++ b/projects/techgarden/src/app/pages/blog/blog.page.html
@@ -15,8 +15,8 @@
           class="grow bg-card rounded-b-lg md:rounded-r-none md:rounded-l-lg border border-s border-border"
         >
           <div class="flex flex-col p-6">
-            <h2 class="bg-border w-1/2 h-5 my-1 rounded-lg"></h2>
-            <p class="bg-border w-3/4 h-4 my-1 rounded-lg"></p>
+            <div class="bg-border w-1/2 h-5 my-1 rounded-lg"></div>
+            <div class="bg-border w-3/4 h-4 my-1 rounded-lg"></div>
             <div class="mt-3 bg-border w-24 h-4 mb-1 rounded-lg"></div>
           </div>
         </div>
